--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h2>Where A Traditional Past Meets A Modern Future.</h2>
     <div id="content">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
-      <img src=../images/transporation/transit.jpg alt="transit pic"> 
+      <img src=../images/transporation/transit.jpg alt="`Modern Transit`"> 
       <h3></h3>
     </div>
   </div>
