--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <img src="../images/transporation/camels_in_truck.jpg" alt="The roads of Riyadh">
       <h3>Sources</h3>
       <a src="http://www.lonelyplanet.com/saudi-arabia/riyadh">Lonely Planet</a>
-      <a src="http://en.wikipedia.org/wiki/Riyadh">wikipedia</a>
+      <a src="http://en.wikipedia.org/wiki/Riyadh">Wikipedia</a>
       
       
     </div>
